--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ hawc/gitcommit.json
 hawc/main/settings/local.py
 hawc/webpack-stats.json
 package-lock.json
+uv.lock
 
 # folders
 *.egg-info/
@@ -26,6 +27,7 @@ package-lock.json
 .ipynb_checkpoints/
 .mypy_cache/
 .ruff_cache/
+.venv/
 .vscode/
 /data/
 docs/site
