move jobs to pyproject.toml using poethepoet (#1161)
* updates

* update and reorder

* more cleanup

* speed up tests

* Revert "speed up tests"

This reverts commit 71253fd4624f55d0b9479e1ddc67616060b9290e.

* remove Makefile too

* updates from review

* update windows docs

--- a/client/pyproject.toml
+++ b/client/pyproject.toml
@@ -35,3 +35,21 @@ Changes = "https://hawc.readthedocs.io/latest/client/#changelog"
 [build-system]
 requires = ["flit_core ~=3.9"]
 build-backend = "flit_core.buildapi"
+
+[tool.poe.tasks.build]
+help = "Build package"
+cmd = "uv build"
+
+[tool.poe.tasks.upload-testpypi]
+help = "Upload package to testpypi"
+sequence = [
+  "build",
+  {cmd = "uv publish --publish-url=https://test.pypi.org/legacy/"},
+]
+
+[tool.poe.tasks.upload-pypi]
+help = "Upload package to pypi"
+sequence = [
+  "build",
+  {cmd = "uv publish"},
+]
