--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,19 +18,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
           architecture: 'x64'
-          cache: 'pip'
-
-      - name: install
-        run: python -m pip install -U pip wheel flit
-
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          architecture: 'x64'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          cache-dependency-glob: "**/pyproject.toml"
+      - name: Install environment
+        run: |
+          uv pip install --system -e ".[dev,docs]"
+          uv pip install --system -e client
       - name: Build client
-        run: cd client && flit build
-
+        run: cd client && poe build
       - name: Publish package to PyPI
         env:
           PUBLISH_PYPI: ${{ secrets.PUBLISH_PYPI }}
