--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -20112,6 +20112,17 @@
     comments: <p>test comments</p>
     created: 2024-01-20 21:12:17.714337+00:00
     last_updated: 2024-01-21 20:38:10.024296+00:00
+- model: animalv2.experiment
+  pk: 2
+  fields:
+    study: 1
+    name: Test Experiment Two
+    design: AA
+    has_multiple_generations: false
+    guideline_compliance: test compliance
+    comments: <p>test comments</p>
+    created: 2024-01-22 21:12:17.714337+00:00
+    last_updated: 2024-01-23 20:38:10.024296+00:00
 - model: animalv2.chemical
   pk: 1
   fields:
