adding aniv2 studylevelvalues to test fixture
seeing if this fixes the test in github env

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -654,6 +654,10 @@
   fields:
     app_label: assessment
     model: labeleditem
+- model: contenttypes.contenttype
+  fields:
+    app_label: animalv2
+    model: studylevelvalue
 - model: auth.permission
   fields:
     name: Can access Wagtail admin
