--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -20151,7 +20151,7 @@
   fields:
     study: 1
     name: Test Experiment
-    design: AA
+    design: Ac
     has_multiple_generations: false
     guideline_compliance: test compliance
     guideline: 90-day Oral Toxicity in Rodents
@@ -20163,7 +20163,7 @@
   fields:
     study: 1
     name: Test Experiment Two
-    design: AA
+    design: Ac
     has_multiple_generations: false
     guideline_compliance: test compliance
     comments: <p>test comments</p>
