--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -178,10 +178,8 @@ jobs:
     - name: Build wheels
       # if: startsWith(github.event.ref, 'refs/tags/') || endsWith(github.event.ref, 'refs/heads/main')
       run: |
-        python manage.py set_git_commit
-        flit build --format wheel
-        cd client && flit build --format wheel && cd ..
-        cp client/dist/*.whl dist
+        uv run python manage.py set_git_commit
+        uv run flit build --format wheel
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
