--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
       with:
         name: coverage
         path: coverage
-        retention-days: 90
+        retention-days: 7
 
   frontend:
     name: frontend
@@ -175,3 +175,18 @@ jobs:
         else
           exit 1
         fi
+    - name: Build wheels
+      run: |
+        # activate environment so we can build the client package too using flit
+        source .venv/bin/activate
+        python manage.py set_git_commit
+        flit build --format wheel
+        cd client && flit build --format wheel && cd ..
+        cp client/dist/*.whl dist
+    - name: Upload wheels
+      uses: actions/upload-artifact@v4
+      with:
+        name: wheel
+        path: dist/*.whl
+        if-no-files-found: ignore
+        retention-days: 7
