create animal v2 API (#1169)
* animalv2 api

Implements API for all of the animalv2 model, including study level values.
Includes test coverage.

* adding aniv2 studylevelvalues to test fixture

seeing if this fixes the test in github env

* add migrations

* poe format

* reorder content types in fixture

* reduce content being returned by serializer

* cleanup some of boilerplate code

---------

Co-authored-by: Andy Shapiro <shapiro.andy@epa.gov>

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -636,6 +636,10 @@
     model: observationtime
 - model: contenttypes.contenttype
   fields:
+    app_label: animalv2
+    model: studylevelvalue
+- model: contenttypes.contenttype
+  fields:
     app_label: assessment
     model: label
 - model: contenttypes.contenttype
@@ -20140,6 +20144,17 @@
     comments: <p>test comments</p>
     created: 2024-01-20 21:12:17.714337+00:00
     last_updated: 2024-01-21 20:38:10.024296+00:00
+- model: animalv2.experiment
+  pk: 2
+  fields:
+    study: 1
+    name: Test Experiment Two
+    design: AA
+    has_multiple_generations: false
+    guideline_compliance: test compliance
+    comments: <p>test comments</p>
+    created: 2024-01-22 21:12:17.714337+00:00
+    last_updated: 2024-01-23 20:38:10.024296+00:00
 - model: animalv2.chemical
   pk: 1
   fields:
