--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -1540,15 +1540,6 @@
     endpoint_id: 7002
     created_on: 2020-08-12 14:11:50.023861+00:00
     last_updated: 2020-08-12 14:11:50.023879+00:00
-- model: vocab.observation
-  pk: 1
-  fields:
-    tested_status: true
-    reported_status: true
-    endpoint_id: 7002
-    experiment_id: 1
-    created_on: 2020-08-12 14:11:50.023861+00:00
-    last_updated: 2020-08-12 14:11:50.023879+00:00
 - model: assessment.dsstox
   pk: DTXSID6026296
   fields:
@@ -4808,6 +4799,15 @@
     comments: a comment
     created: 2024-08-09 08:05:06.595126-04
     last_updated: 2024-08-09 08:05:06.595126-04
+- model: animalv2.observation
+  pk: 1
+  fields:
+    tested_status: true
+    reported_status: true
+    endpoint_id: 7002
+    experiment_id: 1
+    created_on: 2025-06-01 14:11:50.023861+00:00
+    last_updated: 2025-06-01 14:11:50.023879+00:00
 - model: animal.endpointgroup
   pk: 34
   fields:
