--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,15 @@
     "description": "HAWC frontend code",
     "scripts": {
         "clean": "rimraf ../hawc/static/bundles/* && rimraf ../hawc/webpack-stats.json",
-        "build": "npm run clean && webpack --config webpack.config.js",
-        "start": "node devServer.js",
+        "build": "npm run clean && vite build --config vite.config.js && node vite-manifest-to-webpack-stats.js",
+        "start": "vite --config vite.config.js",
         "lint": "eslint --cache .",
         "format": "eslint --cache --fix .",
-        "test": "./node_modules/mochapack/bin/mochapack \"tests/**/*.js\"",
-        "test-windows": "node_modules\\.bin\\mochapack \"tests/**/*.js\"",
-        "generate-parsers": "peggy ./shared/parsers/query.pegjs && peggy ./shared/parsers/format.pegjs"
+        "test": "vitest run --config vitest.config.js --exclude tests/helpers.js",
+        "test:ui": "vitest --ui --config vitest.config.js --exclude tests/helpers.js",
+        "generate-parsers": "peggy ./shared/parsers/query.pegjs && peggy ./shared/parsers/format.pegjs",
+        "dev:vite": "vite --config vite.config.js",
+        "build:vite": "npm run clean && vite build --config vite.config.js && node vite-manifest-to-webpack-stats.js"
     },
     "repository": {
         "type": "git",
@@ -23,16 +25,14 @@
         "@babel/generator": "^7.22.7",
         "@babel/parser": "^7.22.7",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-decorators": "^7.22.7",
+        "@babel/plugin-proposal-decorators": "^7.27.1",
         "@babel/polyfill": "^7.12.1",
         "@babel/preset-env": "^7.22.7",
-        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-react": "^7.27.1",
         "@babel/runtime": "^7.22.6",
+        "@vitest/ui": "^3.2.2",
         "assert": "^2.0.0",
         "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.3.0",
-        "case-sensitive-paths-webpack-plugin": "^2.4.0",
-        "css-loader": "~6.8.1",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-babel": "^5.3.1",
@@ -40,16 +40,14 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-simple-import-sort": "^8.0.0",
         "express": "^4.20.0",
+        "jsdom": "^26.1.0",
         "mocha": "^10.2.0",
         "mochapack": "^2.1.4",
         "peggy": "^4.0.2",
         "prettier": "^1.19.1",
         "rimraf": "^5.0.1",
-        "style-loader": "^3.3.3",
-        "webpack": "^5.94.0",
-        "webpack-bundle-tracker": "^3.1.0",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-middleware": "^6.1.2"
+        "vite": "^4.0.0",
+        "vitest": "^3.2.2"
     },
     "dependencies": {
         "clipboard": "~2.0.11",
