--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
   "django-treebeard==4.7.1",
   "djangorestframework==3.16.0",
   "django-webpack-loader==3.1.1",
+  "django-vite==3.1.0",
   "uritemplate==4.1.1",
   "inflection==0.5.1",
   "pyyaml==6.0.2",
