--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
         "url": "https://github.com/shapiromatron/hawc.git"
     },
     "devDependencies": {
+        "@babel/core": "^7.22.8",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.27.1",
         "@babel/preset-react": "^7.27.1",
         "@vitejs/plugin-react": "^4.5.1",
         "assert": "^2.0.0",
+        "babel-eslint": "^10.1.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-babel": "^5.3.1",
