--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,6 @@ jobs:
         cache-dependency-glob: "**/pyproject.toml"
     - name: install
       run: |
-        mv tests/data/ci-webpack-stats.json hawc/webpack-stats.json
         uv pip install --system -e ".[dev,docs]"
         uv pip install --system -e client
     - name: lint-py
@@ -136,6 +135,7 @@ jobs:
       DJANGO_DB_PW: password
       DJANGO_DB_USER: hawc
       INTEGRATION_TESTS: 1
+      NO_VITE_DEV: 1
       LIVESERVER_HOST: localhost
       LIVESERVER_PORT: 8000
       PUBMED_API_KEY: ${{ secrets.PUBMED_API_KEY }}
