--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
   "django-taggit==6.1.0",
   "django-treebeard==4.7.1",
   "djangorestframework==3.16.0",
-  "django-webpack-loader==3.2.0",
+  "django-vite==3.1.0",
   "uritemplate==4.1.1",
   "inflection==0.5.1",
   "pyyaml==6.0.2",
