add biome config

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "build": "vite build --config vite.config.js",
         "start": "vite --config vite.config.js",
-        "lint": "eslint --cache .",
-        "format": "eslint --cache --fix .",
+        "lint": "biome lint --error-on-warnings .",
+        "format": "biome check --write .",
         "test": "vitest run --config vitest.config.js --exclude tests/helpers.js",
         "generate-parsers": "peggy ./shared/parsers/query.pegjs --format es && peggy ./shared/parsers/format.pegjs --format es"
     },
@@ -20,18 +20,11 @@
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.27.1",
         "@babel/preset-react": "^7.27.1",
+        "@biomejs/biome": "1.9.4",
         "@vitejs/plugin-react": "^4.5.1",
         "assert": "^2.0.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-babel": "^5.3.1",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-react": "^7.32.2",
-        "eslint-plugin-simple-import-sort": "^8.0.0",
         "jsdom": "^26.1.0",
         "peggy": "^4.0.2",
-        "prettier": "^1.19.1",
         "vite": "^4.0.0",
         "vite-plugin-externals": "^0.6.2",
         "vitest": "^3.2.2"
