--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,12 +104,11 @@ jobs:
     - name: build for integration tests
       run: |
         yarn --cwd ./frontend run build
-    - name: Upload webpack build
+    - name: Upload js build
       uses: actions/upload-artifact@v4
       with:
-        name: webpack
+        name: js
         path: |
-          hawc/webpack-stats.json
           hawc/static/bundles/
         retention-days: 1
 
@@ -150,15 +149,15 @@ jobs:
       uses: astral-sh/setup-uv@v5
       with:
         cache-dependency-glob: "**/pyproject.toml"
-    - name: Download webpack build
+    - name: Download js build
       uses: actions/download-artifact@v4
       with:
-        name: webpack
+        name: js
         path: hawc
     - name: install hawc
       run: |
         uv sync --all-extras --python-preference=only-system
-        uv run playwright install --with-deps chromium
+        uv run playwright install --with-deps chromium --only-shell
     # https://github.community/t/how-to-retry-a-failed-step-in-github-actions-workflow/125880
     - name: run integration tests
       id: test
