remove --only-shell command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -157,7 +157,7 @@ jobs:
     - name: install hawc
       run: |
         uv sync --all-extras --python-preference=only-system
-        uv run playwright install --with-deps chromium --only-shell
+        uv run playwright install --with-deps chromium
     # https://github.community/t/how-to-retry-a-failed-step-in-github-actions-workflow/125880
     - name: run integration tests
       id: test
