--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,8 +108,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: js
-        path: |
-          hawc/static/bundles/
+        path: hawc/static/bundles/
         retention-days: 1
 
   integration:
@@ -153,7 +152,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: js
-        path: hawc
+        path: hawc/static/bundles/
     - name: install hawc
       run: |
         uv sync --all-extras --python-preference=only-system
