--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,11 @@
         "useJsxKeyInIterable": "error"
       },
       "security": { "noDangerouslySetInnerHtmlWithChildren": "error" },
-      "style": { "useBlockStatements": "off" },
+      "style": {
+        "useBlockStatements": "off",
+        "useSingleVarDeclarator": "off",
+        "useSelfClosingElements": "off"
+      },
       "suspicious": {
         "noCommentText": "error",
         "noConsole": { "level": "error", "options": { "allow": ["warn", "error"] } },
