--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -1513,6 +1513,51 @@
     deprecated_on: null
     created_on: 2020-08-12 14:11:50.023861+00:00
     last_updated: 2020-08-12 14:11:50.023879+00:00
+- model: vocab.guideline
+  pk: 1
+  fields:
+    number: abc-number
+    name: abc-name
+    profile_name: abc-profile
+    description: abc-test
+    created_on: 2020-08-12 14:11:50.023861+00:00
+    last_updated: 2020-08-12 14:11:50.023879+00:00
+- model: vocab.guideline
+  pk: 2
+  fields:
+    number: def-number
+    name: def-name
+    profile_name: def-profile
+    description: def-test
+    created_on: 2020-08-12 14:11:50.023861+00:00
+    last_updated: 2020-08-12 14:11:50.023879+00:00
+- model: vocab.guidelineprofile
+  pk: 1
+  fields:
+    guideline_id: 1
+    obs_status: not required
+    description: ''
+    endpoint_id: 7002
+    created_on: 2020-08-12 14:11:50.023861+00:00
+    last_updated: 2020-08-12 14:11:50.023879+00:00
+- model: vocab.guidelineprofile
+  pk: 2
+  fields:
+    guideline_id: 2
+    obs_status: required
+    description: ''
+    endpoint_id: 7002
+    created_on: 2020-08-12 14:11:50.023861+00:00
+    last_updated: 2020-08-12 14:11:50.023879+00:00
+- model: vocab.guidelineprofile
+  pk: 3
+  fields:
+    guideline_id: 2
+    obs_status: recommended
+    description: ''
+    endpoint_id: 7002
+    created_on: 2020-08-12 14:11:50.023861+00:00
+    last_updated: 2020-08-12 14:11:50.023879+00:00
 - model: assessment.dsstox
   pk: DTXSID6026296
   fields:
@@ -1566,6 +1611,7 @@
     enable_literature_review: true
     enable_project_management: true
     enable_data_extraction: true
+    enable_observations: true
     enable_risk_of_bias: true
     enable_bmd: true
     enable_summary_tables: true
@@ -1608,6 +1654,7 @@
     enable_literature_review: true
     enable_project_management: true
     enable_data_extraction: true
+    enable_observations: false
     enable_risk_of_bias: true
     enable_bmd: true
     enable_summary_tables: true
@@ -1648,6 +1695,7 @@
     enable_literature_review: true
     enable_project_management: true
     enable_data_extraction: true
+    enable_observations: false
     enable_risk_of_bias: true
     enable_bmd: true
     enable_summary_tables: true
@@ -1688,6 +1736,7 @@
     enable_literature_review: true
     enable_project_management: true
     enable_data_extraction: true
+    enable_observations: false
     enable_risk_of_bias: true
     enable_bmd: true
     enable_summary_tables: true
@@ -1727,6 +1776,7 @@
     enable_literature_review: false
     enable_project_management: false
     enable_data_extraction: true
+    enable_observations: false
     enable_risk_of_bias: false
     enable_bmd: true
     enable_summary_tables: false
@@ -4767,6 +4817,15 @@
     comments: a comment
     created: 2024-08-09 08:05:06.595126-04
     last_updated: 2024-08-09 08:05:06.595126-04
+- model: animalv2.observation
+  pk: 1
+  fields:
+    tested_status: true
+    reported_status: true
+    endpoint_id: 7002
+    experiment_id: 1
+    created_on: 2025-06-01 14:11:50.023861+00:00
+    last_updated: 2025-06-01 14:11:50.023879+00:00
 - model: animal.endpointgroup
   pk: 34
   fields:
@@ -20141,6 +20200,7 @@
     design: AA
     has_multiple_generations: false
     guideline_compliance: test compliance
+    guideline: 1
     comments: <p>test comments</p>
     created: 2024-01-20 21:12:17.714337+00:00
     last_updated: 2024-01-21 20:38:10.024296+00:00
