--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "version": "1.0.0",
   "description": "HAWC frontend code",
+  "type": "module",
   "scripts": {
     "build": "vite build --config vite.config.js",
     "start": "vite --config vite.config.js",
