--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@babel/plugin-proposal-decorators": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@biomejs/biome": "1.9.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.5.1",
     "assert": "^2.0.0",
     "jsdom": "^26.1.0",
