--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,10 @@
     "@babel/plugin-proposal-decorators": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@biomejs/biome": "1.9.4",
-    "@testing-library/dom": "^10.4.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^12.1.5",
-    "@vitejs/plugin-react": "^4.5.1",
+    "@vitejs/plugin-react": "^5.0.1",
+    "@types/react": "^17.0.0",
     "assert": "^2.0.0",
     "jsdom": "^26.1.0",
     "peggy": "^4.0.2",
