--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,8 +40,8 @@
     "d3-cloud": "^1.2.5",
     "datatables.net": "^1.13.5",
     "lodash": "^4.17.21",
-    "mobx": "6.13.7",
-    "mobx-react": "9.2.0",
+    "mobx": "^6.13.7",
+    "mobx-react": "^9.2.0",
     "moment": "^2.29.4",
     "plotly.js": "3.0.1",
     "prop-types": "^15.8.1",
