--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         if [ "$RUNNER_OS" == "Linux" ]; then
           export "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib"
         fi
-        coverage run -m pytest -v --block-network --allowed-hosts=127.0.0.1 --record-mode=none
+        coverage run -m pytest -v --block-network --allowed-hosts=::1 --record-mode=none
         echo "# Python coverage report" >> $GITHUB_STEP_SUMMARY
         coverage report --format=markdown -i >> $GITHUB_STEP_SUMMARY || true
         coverage html -d coverage -i
@@ -162,7 +162,7 @@ jobs:
       id: test
       continue-on-error: true
       run: |
-        uv run py.test -v --block-network --allowed-hosts=127.0.0.1 tests/integration/
+        uv run py.test -v --block-network --allowed-hosts=::1 tests/integration/
     - name: run integration tests (retry)
       if: steps.test.outcome=='failure'
       id: retry
