--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.7/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-  "files": { "ignoreUnknown": false, "includes": ["**", "!**/shared/parsers/**/*.js"]},
+  "files": { "ignoreUnknown": false, "ignore": ["shared/parsers/*.js"] },
   "formatter": {
     "enabled": true,
     "useEditorconfig": true,
@@ -13,18 +13,18 @@
     "attributePosition": "auto",
     "bracketSpacing": true
   },
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "organizeImports": { "enabled": true },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": false,
-      "a11y": {},
+      "a11y": { "noBlankTarget": "error" },
       "correctness": {
         "noChildrenProp": "error",
         "noUnusedVariables": "error",
         "useJsxKeyInIterable": "error"
       },
-      "security": { "noDangerouslySetInnerHtmlWithChildren": "error", "noBlankTarget": "error"},
+      "security": { "noDangerouslySetInnerHtmlWithChildren": "error" },
       "style": {
         "useBlockStatements": "off",
         "useSingleVarDeclarator": "off",
@@ -37,7 +37,7 @@
         "noSparseArray": "error"
       }
     },
-    "includes":["**","!**/shared/parsers"]
+    "ignore": ["shared/parsers"]
   },
   "json": {
     "formatter": {
