Update to Python 3.14 (#1247)
* update Python from version 3.13 to 3.14

* remove uv integration with poe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ keywords = [
 ]
 classifiers = [
   "Intended Audience :: Science/Research",
-  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
 ]
-requires-python = ">=3.13"
+requires-python = ">=3.14"
 # see https://peps.python.org/pep-0440/#version-specifiers
 dependencies = [
   # web application
@@ -167,6 +167,9 @@ fail_under=92.0
 precision=1
 
 # --- --- --- --- --- --- --- --- --- --- TASKS --- --- --- --- --- --- --- --- --- ---
+[tool.poe.executor]
+type = "simple"
+
 [tool.poe.tasks.sync-dev]
 help = "Sync dev environment after code checkout"
 sequence = [
